# laevitas_api

./: .gitignore  LICENSE.txt  README.markdown  pyproject.toml  pyproject.txt  requirements.txt  setup.cfg  setup.txt
laevitas_api/: __init__.py  api.py  laevitas_api___init__.py  utilities.py
tests/: test.ipynb  tests_test_api.py
