[metadata]
name = laevitas_api
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A Python package to interact with the Laevitas API for historical options and futures data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/clivelamkk/laevitas_api
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.28.0
    pandas>=1.5.0
    pytz>=2022.1